# jwclaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_CHECKLIST.md  LICENSE  MANIFEST.in  MODEL_MANAGER_GUIDE.md  QUICKSTART.md  README.md  USER.md  WEBUI_README.md  agent_rules.json  cache.py  config.json  context_manager.py  jwclaw.bat  jwclaw.ps1  jwclaw.py  pyproject.toml  requirements.txt  sandbox.py  secure_config.py  secure_shell.py  setup.py  skill_metadata.py  skills_metadata.json  webui.bat  webui.py
.github/workflows/: ci.yml
1/: cache.py  context_manager.py  help_system.py  jwclaw.py  models.json  rules_engine.py  skill_metadata.py  skills_metadata.json  webui.py  功能检查报告.md  模型切换优化说明.md  模型管理功能测试.md
1/webui/templates/: index.html
scripts/: install.py  uninstall.py
skills/book_update_checker/: SKILL.md
skills/book_update_checker/scripts/: check_and_publish.ps1
skills/browser-cdp/scripts/: browser_actions.py  browser_launcher.py  cdp_client.py
skills/browser_cdp/scripts/: cdp_proxy.py
skills/find-skills/: SKILL.md
skills/model_manager/: SKILL.md
skills/news/: SKILL.md
skills/open_app/: SKILL.md
skills/open_app/scripts/: open_app.ps1
skills/shell/: SKILL.md
skills/video_download/: SKILL.md
skills/video_download/scripts/: download_video.ps1
skills/weather-advisor/: SKILL.md
skills/weather_advisor/: SKILL.md
skills/weather_advisor/scripts/: weather_advisor_tool.py
skills/web_search/: SKILL.md
skills/xlsx/: SKILL.md
src/jwclaw/: __init__.py  __main__.py  core.py
webui/templates/: index.html
